--- a/views/editfarm.pug
+++ b/views/editfarm.pug
@@ -131,7 +131,7 @@ head
                         input(type='date' name='date' value=user.date min='1960-01-01'  max='2100-12-31' )
                       li.align
                         label Qty, Tonnes(1000kg):
-                        input#qty(type='Number' name='quantity' placeholder='*Quantity in Tonnes.(1000kgs)' value=user.quantity)
+                        input#qty(type='Float' name='quantity' placeholder='*Quantity in Tonnes.(1000kgs)' value=user.quantity)
                       li.align
                         label Comments:
                         input#comments(type='text' name='comments' placeholder='*Comments on Agricultural Produce.' rows='5' cols='33' value=user.comments)
