--- a/views/editpurchases.pug
+++ b/views/editpurchases.pug
@@ -155,12 +155,12 @@ head
                       label.form-label
                         | Qty,
                         | Tonnes(1000kg):
-                      input#qty(type='Number' name='quantity' placeholder='*Qty in Tonnes.'  oninput='add_number()' value=user.quantity)
+                      input#qty(type='Float' name='quantity' placeholder='*Qty in Tonnes.'  oninput='add_number()' value=user.quantity)
                       .invalid-feedback
                         | Please enter a Quantity in tonnnes.
                     .align
                       label.form-label Total Amount (shs):
-                      input#txtresult(type='Number' name='total' placeholder='*Amount(shs).' value=user.total)
+                      input#txtresult(type='Float' name='total' placeholder='*Amount(shs).' value=user.total)
                     .align
                       label.form-label  Purchase Type:
                       select(name='sale_type' )
