--- a/views/prices.pug
+++ b/views/prices.pug
@@ -128,7 +128,7 @@ head
                           option(value='Others') Others
                       li.align
                         label Price (shs):
-                        input#qty(type='Number' name='quantity' placeholder='*Price /Kg for Agricultural Product' required='' onblur='add1()' oninput='add_number()')
+                        input#qty(type='Float' name='quantity' placeholder='*Price /Kg for Agricultural Product' required='' onblur='add1()' oninput='add_number()')
                       li.align
                         label Comments:
                         textarea#comments(type='text' name='comments' placeholder='*Comments on Price.' rows='5' cols='33')
