--- a/views/editpurchases.pug
+++ b/views/editpurchases.pug
@@ -162,14 +162,12 @@ head
                       label.form-label Total Amount (shs):
                       input#txtresult(type='Float' name='total' placeholder='*Amount(shs).' value=user.total)
                     .align
-                      label.form-label  Purchase Type:
-                      select(name='sale_type' )
-                        option(value=user.sale_type)
-                          | Purchase type
-                        option(value='Cash') Cash
-                        option(value='Credit') Credit
-                      .invalid-feedback
-                        | Please enter a Purchase type
+                        label.form-label
+                          | Price to be sold
+                          | (shs):
+                        input#unitprice(type='Number' name='saleprice' placeholder='*Unit Price /kg (shs).' value=user.saleprice)
+                        .invalid-feedback
+                          | Please enter a valid unit price.
                     .align
                       label.form-label Comments:
                       textarea#comments(type='text' name='comments' placeholder='*Comments on Purchase.' rows='5' cols='33' value=user.comments)
