--- a/views/salesrecord.pug
+++ b/views/salesrecord.pug
@@ -102,14 +102,16 @@ head
           .main.custom1
             h2.txt1(style='font-size:45px;text-decoration: underline;')
               | Customer Sales Records
+            if user.userrole == "Director"
+              h2.txt1(style='font-size:30px;text-decoration: none;') Total Sales : #{total.totalsells} Ugx 
             .table-responsive(style='padding:20px;')
               table#table.table.table-bordered.table-hover.table-secondary
                 thead
                   tr
-                    th Branch
+                    th Branch 
                     th Customer                   
                     th Product                   
-                    th Qty,tonnes
+                    th Qty in tonnes
                     th Sale
                     th Total (shs)                    
                 tbody(style='overflow-y: scroll;')
@@ -122,7 +124,14 @@ head
                       td #{user.quantity}
                       td #{user.sale_type}
                       td #{user.total}
-            .col.col-md-12              
+                tr 
+                  td 
+                  td 
+                  td 
+                  td 
+                  td Total Sales
+                  td #{total.totalsells}
+            .col.col-md-12                          
               a.btn.custom( href="/saleslist/update" style='width: 40%;margin-top: 0px;height:50px;margin-left:350px;' type='submit')
                 | Update
                 | Records                                                                                                                                                                              
