--- a/views/creditrecord.pug
+++ b/views/creditrecord.pug
@@ -102,7 +102,7 @@ head
             h2.txt1(style='font-size:45px;text-decoration: underline;')
               | Customer Credit Sales Records
             if user.userrole == "Director"
-              h2.txt1(style='font-size:30px;text-decoration: none;') Total Credit Sales : #{total.creditsells} Ugx 
+              h2.txt1(style='font-size:30px;text-decoration: underline;') Total Credit Sales : #{total.creditsells} Ugx 
             .table-responsive(style='padding:20px;')
               table.table.table-bordered.table-hover.table-secondary
                 thead
