--- a/views/prices.pug
+++ b/views/prices.pug
@@ -123,8 +123,8 @@ head
                           option(value='Beans') Beans
                           option(value='Maize') Maize
                           option(value='Cow_peas') Cow Peas
-                          option(value='Beans') Beans
-                          option(value='Maize') Maize
+                          option(value='Soy_Beans') Soy Beans
+                          
                           option(value='Others') Others
                       li.align
                         label Price (shs):
