--- a/views/editfarm.pug
+++ b/views/editfarm.pug
@@ -123,12 +123,12 @@ head
                           option(value='Beans') Beans
                           option(value='Maize') Maize
                           option(value='Cow_peas') Cow Peas
-                          option(value='Beans') Beans
-                          option(value='Maize') Maize
+                          option(value='Soy_Beans') Soy Beans
+                         
                           option(value='Others') Others
                       li
                         label(for='start') Purchase Date:
-                        input(type='date' name='date' value=user.date min='1960-01-01'  max='2100-12-31' )
+                        input(type='datetime-local' name='date' value=user.date min='1960-01-01'  max='2100-12-31' )
                       li.align
                         label Qty, Tonnes(1000kg):
                         input#qty(type='Float' name='quantity' placeholder='*Quantity in Tonnes.(1000kgs)' value=user.quantity)
