--- a/views/home.pug
+++ b/views/home.pug
@@ -56,7 +56,7 @@ head
             .row
               .col-md-4(style='margin:auto;padding:auto;')
                 .card
-                  .card-header(style='border-radius: 30px;')
+                  .card-header(style='border-radius: 30px; height:100px')
                     | PURCHASES
                   ul.list-group.list-group-flush
                     li.list-group-item
@@ -67,7 +67,7 @@ head
                       a(href='/farmlist' style=' text-decoration: none; color:#07026d;')  Farm Records
               .col-md-4(style='margin:auto;padding:auto;')
                 .card
-                  .card-header(style='border-radius: 30px;')
+                  .card-header(style='border-radius: 30px;height:100px')
                     | SALES
                   ul.list-group.list-group-flush
                     li.list-group-item
@@ -86,7 +86,7 @@ head
                         | Credit Sales Record
               .col-md-4(style='margin:auto;padding:auto;')
                 .card
-                  .card-header(style='border-radius: 30px;')
+                  .card-header(style='border-radius: 30px;height:100px')
                     | PRICES
                   ul.list-group.list-group-flush
                     li.list-group-item
