--- a/views/home.pug
+++ b/views/home.pug
@@ -56,9 +56,9 @@ head
             .row
               .col-md-4(style='margin:auto;padding:auto;')
                 .card
-                  .card-header(style='border-radius: 30px; height:100px')
+                  .card-header(style='border-radius: 30px; font-size:30px')
                     | PURCHASES
-                  ul.list-group.list-group-flush
+                  ul.list-group.list-group-flush(style='border-radius: 30px;')
                     li.list-group-item
                       a(href='/purchases' style=' text-decoration: none; color:#07026d;') Purchase forms
                     li.list-group-item
@@ -67,9 +67,9 @@ head
                       a(href='/farmlist' style=' text-decoration: none; color:#07026d;')  Farm Records
               .col-md-4(style='margin:auto;padding:auto;')
                 .card
-                  .card-header(style='border-radius: 30px;height:100px')
+                  .card-header(style='border-radius: 30px;font-size:30px')
                     | SALES
-                  ul.list-group.list-group-flush
+                  ul.list-group.list-group-flush(style='border-radius: 30px;')
                     li.list-group-item
                       a(href='/sales' style=' text-decoration: none; color:#07026d;')
                         | Sales
@@ -86,9 +86,9 @@ head
                         | Credit Sales Record
               .col-md-4(style='margin:auto;padding:auto;')
                 .card
-                  .card-header(style='border-radius: 30px;height:100px')
+                  .card-header(style='border-radius: 30px;font-size:30px')
                     | PRICES
-                  ul.list-group.list-group-flush
+                  ul.list-group.list-group-flush(style='border-radius: 30px;')
                     li.list-group-item
                       a(href='/prices' style=' text-decoration: none; color:#07026d;') Price Records
 footer.page-footer.font-small.blue.pt-4
