--- a/public/css/style11.css
+++ b/public/css/style11.css
@@ -440,7 +440,7 @@ th{
 .card {
   float:center;
   width:250px;
-  height:250px;
+  height:auto;
   display:block;
   margin-top: 15px;
   margin-left:40px;
@@ -461,6 +461,10 @@ th{
 .card-header{
   background-color:#07026d;
   color:#ffffff;
+ 
+  height:100px;
+  text-align:center;
+  padding-top:30px;
   
   /* border-radius: 30px; */
 }
