--- a/public/css/style11.css
+++ b/public/css/style11.css
@@ -304,7 +304,7 @@ ul {
 }
 .main {
   width: 1070px;
-  height: 450px;
+  height: 480px;
   overflow: hidden;
   background: url("https://doc-08-2c-docs.googleusercontent.com/docs/securesc/68c90smiglihng9534mvqmq1946dmis5/fo0picsp1nhiucmc0l25s29respgpr4j/1631524275000/03522360960922298374/03522360960922298374/1Sx0jhdpEpnNIydS4rnN4kHSJtU1EyWka?e=view&authuser=0&nonce=gcrocepgbb17m&user=03522360960922298374&hash=tfhgbs86ka6divo3llbvp93mg4csvb38")
     no-repeat center/ cover;
@@ -440,7 +440,7 @@ th{
 .card {
   float:center;
   width:250px;
-  height:auto;
+  height: 300px;;
   display:block;
   margin-top: 15px;
   margin-left:40px;
