--- a/views/signupnew.pug
+++ b/views/signupnew.pug
@@ -17,69 +17,69 @@ head
   script(defer='' src='https://use.fontawesome.com/releases/v5.0.13/js/fontawesome.js' integrity='sha384-6OIrr52G08NpOFSZdxxz1xdNSndlD4vdcf/q2myIUVO0VsqaGHJsB0RaBE01VTOY' crossorigin='anonymous')
 .wrapper
   // Sidebar
-  //- nav#sidebar
-  //-   .sidebar-header
-  //-     h3 
-  //-       img(src='/Img/logo5.jpg' style='width:160px; height:160px; border-radius: 3px; background-color: #ddd;')
-  //-     strong KGL
-  //-   ul.list-unstyled.components(style='font-size: 19px;')
-  //-     li
-  //-       a(href='/home')
-  //-         i.fas.fa-home
-  //-         |                         Home 
-  //-     li
-  //-       if user.userrole == "Manager" || user.userrole == "Director"     
-  //-         a.dropdown-toggle(href='#purchaseSubmenu' data-toggle='collapse' aria-expanded='false' )
-  //-           i.fas.fa-copy
-  //-           |                           Purchases
-  //-         ul#purchaseSubmenu.collapse.list-unstyled
-  //-           li
-  //-             a(href='/purchases') Purchase Form
-  //-           li            
-  //-             a(href='/purchaselist') Purchase Record           
-  //-     li    
-  //-       a.dropdown-toggle(href='#saleSubmenu' data-toggle='collapse' aria-expanded='false')
-  //-         i.fas.fa-copy
-  //-         |                           Sales
-  //-       ul#saleSubmenu.collapse.list-unstyled
-  //-         li
-  //-           a(href='/sales') Sales Form
-  //-         li               
-  //-           a(href='/creditsales') Credit Sales Form 
-  //-         li
-  //-           if user.userrole == "Manager" || user.userrole == "Director" 
-  //-             a(href='/saleslist') Sales Record
-  //-         li
-  //-           if user.userrole == "Manager" || user.userrole == "Director"
-  //-             a(href='/creditsaleslist') Credit Record
-  //-     li
-  //-       if user.userrole == "Manager" || user.userrole == "Director"
-  //-         a.dropdown-toggle(href='#farmSubmenu' data-toggle='collapse' aria-expanded='false' )
-  //-           i.fas.fa-copy
-  //-           |                           Farm
-  //-         ul#farmSubmenu.collapse.list-unstyled
-  //-           li
-  //-             a(href='/farm') Farm Form
-  //-           li
-  //-             a(href='/farmlist') Farm Record          
-  //-     li
-  //-       a(href='/prices')
-  //-         i.fas.fa-briefcase
-  //-         |                         Prices      
-  //-     li.active    
-  //-       a.dropdown-toggle(href='#accountSubmenu' data-toggle='collapse' aria-expanded='false' style='color:#181553' )
-  //-         i.fas.fa-user
-  //-         |                           Account
-  //-       ul#accountSubmenu.collapse.list-unstyled
-  //-         li
-  //-           a(href='/account') Account
-  //-         li
-  //-           if user.userrole == "Manager" || user.userrole == "Director" 
-  //-             a(href='/register') Register
-  //-         li
-  //-           if user.userrole == "Manager" || user.userrole == "Director"
-  //-             a(href='/employeelist') Employees
-  //-   ul.list-unstyled.CTAs      
+  nav#sidebar
+    .sidebar-header
+      h3 
+        img(src='/Img/logo5.jpg' style='width:160px; height:160px; border-radius: 3px; background-color: #ddd;')
+      strong KGL
+    ul.list-unstyled.components(style='font-size: 19px;')
+      li
+        a(href='/home')
+          i.fas.fa-home
+          |                         Home 
+      li
+        if user.userrole == "Manager" || user.userrole == "Director"     
+          a.dropdown-toggle(href='#purchaseSubmenu' data-toggle='collapse' aria-expanded='false' )
+            i.fas.fa-copy
+            |                           Purchases
+          ul#purchaseSubmenu.collapse.list-unstyled
+            li
+              a(href='/purchases') Purchase Form
+            li            
+              a(href='/purchaselist') Purchase Record           
+      li    
+        a.dropdown-toggle(href='#saleSubmenu' data-toggle='collapse' aria-expanded='false')
+          i.fas.fa-copy
+          |                           Sales
+        ul#saleSubmenu.collapse.list-unstyled
+          li
+            a(href='/sales') Sales Form
+          li               
+            a(href='/creditsales') Credit Sales Form 
+          li
+            if user.userrole == "Manager" || user.userrole == "Director" 
+              a(href='/saleslist') Sales Record
+          li
+            if user.userrole == "Manager" || user.userrole == "Director"
+              a(href='/creditsaleslist') Credit Record
+      li
+        if user.userrole == "Manager" || user.userrole == "Director"
+          a.dropdown-toggle(href='#farmSubmenu' data-toggle='collapse' aria-expanded='false' )
+            i.fas.fa-copy
+            |                           Farm
+          ul#farmSubmenu.collapse.list-unstyled
+            li
+              a(href='/farm') Farm Form
+            li
+              a(href='/farmlist') Farm Record          
+      li
+        a(href='/prices')
+          i.fas.fa-briefcase
+          |                         Prices      
+      li.active    
+        a.dropdown-toggle(href='#accountSubmenu' data-toggle='collapse' aria-expanded='false' style='color:#181553' )
+          i.fas.fa-user
+          |                           Account
+        ul#accountSubmenu.collapse.list-unstyled
+          li
+            a(href='/account') Account
+          li
+            if user.userrole == "Manager" || user.userrole == "Director" 
+              a(href='/register') Register
+          li
+            if user.userrole == "Manager" || user.userrole == "Director"
+              a(href='/employeelist') Employees
+    ul.list-unstyled.CTAs      
   
   // Page Content
   #content 
