--- a/views/prices.pug
+++ b/views/prices.pug
@@ -122,10 +122,10 @@ head
                             | Product Name
                           option(value='Beans') Beans
                           option(value='Maize') Maize
-                          option(value='Cow_peas') Cow Peas
-                          option(value='Soy_Beans') Soy Beans
+                          option(value='Cowpeas') Cow Peas
+                          option(value='SoyBeans') Soy Beans
                           
-                          option(value='Others') Others
+                          option(value='Gnuts') Gnuts
                       li.align
                         label Price (shs):
                         input#qty(type='Float' name='quantity' placeholder='*Price /Kg for Agricultural Product' required='' onblur='add1()' oninput='add_number()')
