--- a/views/purchases.pug
+++ b/views/purchases.pug
@@ -133,10 +133,10 @@ head
                           | Agricultural Product
                         option(value='Beans') Beans
                         option(value='Maize') Maize
-                        option(value='Cow_Peas') Cow Peas
-                        option(value='Soy_Beans') Soy Beans
+                        option(value='Cowpeas') Cow Peas
+                        option(value='SoyBeans') Soy Beans
                        
-                        option(value='Others') Others
+                        option(value='Gnuts') Gnuts
                     div
                       label.form-label(for='start') Purchase Date:
                       input(type='datetime-local' name='date' value='' min='1960-01-01' max='2100-12-31' onblur='dte()')
