--- a/views/farm.pug
+++ b/views/farm.pug
@@ -122,10 +122,10 @@ head
                             | Product Name
                           option(value='Beans') Beans
                           option(value='Maize') Maize
-                          option(value='Cow_peas') Cow Peas
-                          option(value='Soy_Beans') Soy Beans
+                          option(value='Cowpeas') Cow Peas
+                          option(value='SoyBeans') Soy Beans
                          
-                          option(value='Others') Others
+                          option(value='Gnuts') Gnuts
                       li
                         label(for='start') Purchase Date:
                         input(type='datetime-local' name='date' value='' min='1960-01-01' required='' max='2100-12-31' onblur='dte()')
