--- a/views/home.pug
+++ b/views/home.pug
@@ -56,7 +56,7 @@ head
             .row
               .col-md-4(style='margin:auto;padding:auto;')
                 if user.userrole == "Director" 
-                  h2.txt1(style='font-size:30px;text-decoration:underline;') Purchases : #{purchase.totalpurchases} Ugx 
+                  h2.txt1(style='font-size:30px;text-decoration:underline;') Purchases : #{new Intl.NumberFormat().format(purchase.totalpurchases)} Ugx 
                 .card
                   .card-header(style='border-radius: 30px; font-size:30px')
                     | PURCHASES
@@ -69,7 +69,7 @@ head
                       a(href='/farmlist' style=' text-decoration: none; color:#07026d;')  Farm Records
               .col-md-4(style='margin:auto;padding:auto;')
                 if user.userrole == "Director" 
-                  h2.txt1(style='font-size:30px;text-decoration:underline;') Sales : #{sale.totalsells}  Ugx
+                  h2.txt1(style='font-size:30px;text-decoration:underline;') Sales : #{new Intl.NumberFormat().format(sale.totalsells)}  Ugx
                 .card
                   .card-header(style='border-radius: 30px;font-size:30px')
                     | SALES
@@ -90,7 +90,7 @@ head
                         | Credit Sales Record
               .col-md-4(style='margin:auto;padding:auto;')
                 if user.userrole == "Director" 
-                  h2.txt1(style='font-size:30px;text-decoration:underline;')  Credit Sales : #{credit.creditsells} Ugx   
+                  h2.txt1(style='font-size:30px;text-decoration:underline;')  Credit Sales:#{new Intl.NumberFormat().format(credit.creditsells)}Ugx   
                 .card
                   .card-header(style='border-radius: 30px;font-size:30px')
                     | PRICES
