--- a/views/purchasesrecordupdate.pug
+++ b/views/purchasesrecordupdate.pug
@@ -122,7 +122,7 @@ head
                       td #{user.customername}                      
                       td #{user.pdct}                                             
                       td #{user.quantity}                      
-                      td #{user.total} 
+                      td #{new Intl.NumberFormat().format(user.total)} 
                       td
                         form(action="/purchaselist/edit/"+user._id)
                           input(type="hidden")
